--- a/fdc/index.html
+++ b/fdc/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/fav.png">
     <title>Fortune Data Center - Elevate Your Growth with Us</title>
        <meta name="robots" content="noindex, nofollow">
-       
+
 
   <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -287,7 +287,7 @@ with AI-Fueled Data Centers
 
                         <div class="banner-btn sal-animate" data-sal="slide-down" data-sal-delay="500" data-sal-duration="800">
                             <!-- <a href="#" class="rts-btn btn__long border__white white__color" >Fortune Vision <i class="fa-regular fa-chevron-right"></i></a> -->
-                            <a href="https://www.youtube.com/watch?v=hz4Fssgtt78" class="popup-video video-btn rts-btn btn__long border__white white__color" >
+                            <a href="https://www.youtube.com/watch?v=hz4Fssgtt78" class="popup-video video-btn rts-btn btn__long border__white white__color" target="_blank">
                              
                                 <span class="disc " >Explore Our Facility <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="rgba(255,250,250,1)"><path d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM10.6219 8.41459L15.5008 11.6672C15.6846 11.7897 15.7343 12.0381 15.6117 12.2219C15.5824 12.2658 15.5447 12.3035 15.5008 12.3328L10.6219 15.5854C10.4381 15.708 10.1897 15.6583 10.0672 15.4745C10.0234 15.4088 10 15.3316 10 15.2526V8.74741C10 8.52649 10.1791 8.34741 10.4 8.34741C10.479 8.34741 10.5562 8.37078 10.6219 8.41459Z"></path></svg></span>
                                    <!-- <span class="icon"><i class="fa-sharp fa-solid fa-play"></i></span> -->
