--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ $(window).on('load', function() {
                              
                                 <div class="author__content">
                                     <span>Key Deliverables</span>
-                                    <p class="description">Layout designed including icons design, banners, gradients in figma, developed using bootstrap</p>
+                                    <p class="description">Conducting competitive analysis, Defining typescale, color, iconography. Creating wireframes high-fidelity & developed using bootstrap</p>
 
                                 </div>
                             </div>
@@ -482,7 +482,7 @@ $(window).on('load', function() {
                                 </div> -->
                                 <div class="author__content">
                                     <span class="des_heading">Key Deliverables </span>
-                                    <p class="description"> Competitors visual pattern analysis, created custom icons, effective gradient and selected suitable images for project. </p>
+                                    <p class="description"> Competitors visual pattern analysis, Defining typescale, color, custom icons, Layout. Designed using Figma & Photoshop. </p>
                                 </div>
                             </div>
                            
