--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ $(window).on('load', function() {
                                 </div> -->
                                 <div class="author__content">
                                     <span class="des_heading">Key Deliverables </span>
-                                    <p class="description"> Competitors visual pattern analysis, Defining typescale, color, custom icons, Layout. Designed using Figma & Photoshop. </p>
+                                    <p class="description"> Competitors visual pattern analysis, Defining typescale, color, custom icons & illustration, Layout. Designed using Figma & Photoshop. </p>
                                 </div>
                             </div>
                            
