--- a/index.html
+++ b/index.html
@@ -296,14 +296,12 @@ $(window).on('load', function() {
 
 
 
-
-<section class="" >
 <section class="rts-faq section__padding rts-brand rts-brand__bg--section ">
         <div class="container container2">
             <div class="align-items-center row">
-                <div class="col-lg-8">
+                <div class="col-lg-8 offset-lg-2 text-center">
 
-                    <div class="rts-faq__first rts-faq__first2" style="max-width: 580px">
+                    <div class="rts-faq__first rts-faq__first2" style="max-width: 620px;margin: auto;">
                         <p class="offer">Hi i’m rohit</p>
                       <!--   <h2 class="title sal-animate" data-sal="slide-down" data-sal-delay="300" data-sal-duration="800">
                            6 Years<sup>+</sup> Experience in Designing Mobile Apps, Websites, CMS Panels & Presentation with Agencies & Startups.
@@ -339,9 +337,9 @@ $(window).on('load', function() {
 
                     </div>
 
- <div class="col-lg-4">
+<!--  <div class="col-lg-4">
     <img src="assets/images/port/header.png">
-</div>
+</div> -->
 
                 </div>
 
@@ -358,19 +356,6 @@ $(window).on('load', function() {
     
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-</section>
 
 
      
