--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ $(window).on('load', function() {
                              
                                 <div class="author__content">
                                     <span>Key Deliverables</span>
-                                    <p class="description">Conducting competitive analysis, Defining typescale, color, iconography. Creating wireframes high-fidelity & developed using bootstrap</p>
+                                    <p class="description">Conducting competitive analysis, Defining typescale, color, iconography. Creating wireframes in figma & developed using bootstrap</p>
 
                                 </div>
                             </div>
