--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ $(window).on('load', function() {
                         </h2>
 
                       
-                       <p data-sal="slide-down" data-sal-delay="200" data-sal-duration="800" class="sal-animate">Available for a full-time position, open to both on-site and remote opportunities.
+                       <p data-sal="slide-down" data-sal-delay="200" data-sal-duration="800" class="sal-animate">Open for full time opportunities only
 
 
 
