--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ $(window).on('load', function() {
                         <p class="offer">Hi i’m rohit</p>
 
                           <h2 class="title sal-animate" data-sal="slide-down" data-sal-delay="300" data-sal-duration="800">
-                           4.5 Years of experience designing mobile apps, websites, dashboards and presentations for digital agencies & startups
+                           4 Years+ of experience designing mobile apps, websites, dashboards and presentations for digital agencies & startups
                         </h2>
 
                       
