--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ $(window).on('load', function() {
                 <div class="col-lg-8 offset-lg-2 text-center">
 
                     <div class="rts-faq__first rts-faq__first2" style="max-width: 620px;margin: auto;">
-                        <p class="offer">Hi i’m rohit</p>
+                        <p class="offer">Hello i’m rohit</p>
 
                           <h2 class="title sal-animate" data-sal="slide-down" data-sal-delay="300" data-sal-duration="800">
                            4 Years+ of experience designing mobile apps, websites, dashboards and presentations for digital agencies & startups
